fix: 🐛 Slightly less padding in code blocks on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,7 +68,7 @@ pre {
 }
 
 pre > code {
-  @apply px-10 pb-5 pt-12 sm:pt-5 overflow-y-auto scrollbar-thin max-w-70/100 md:max-w-91/100;
+  @apply px-7 sm:px-10 pb-5 pt-12 sm:pt-5 overflow-y-auto scrollbar-thin max-w-70/100 md:max-w-91/100;
 }
 
 code > div[data-highlighted="false"] {
